# Demo-Swiggy_Clone

./: README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3b25df26d7c5_removed_is_veg_column_from_restaurant_.py  5156bad6fd05_added_is_veg_column_to_restaurant_menu_.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schema.py  schemas.py  utils.py
app/routes/: admin.py  auth.py  restaurant.py  user.py
app/services/: svc_menu.py  svc_restaurant.py
